[gd_scene load_steps=2 format=3 uid="uid://uk2yne7aibnp"]

[ext_resource type="Script" uid="uid://b5x2k1v0wvc2c" path="res://scripts/ui.gd" id="1_731sn"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_731sn")
metadata/_edit_use_anchors_ = true

[node name="ControlsContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0

[node name="SimulationControl" type="Button" parent="ControlsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="SimulationReset" type="Button" parent="ControlsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset
"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="ControlsContainer/SimulationControl" to="." method="_on_simulation_control_pressed"]
[connection signal="pressed" from="ControlsContainer/SimulationReset" to="." method="_on_simulation_reset_pressed"]
